main/default/objects/Product_Pricing__c/Product_Pricing__c.object-meta.xml
<CustomObject>
    <label>Product Pricing</label>
    <nameField>
        <label>Product Pricing</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>