main/default/objects/Product_Pricing__c/fields/AdditionalInformationPrompt__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformationPrompt__c</fullName>
    <formula>Sales_Product_Rate_Plan__r.AdditionalInformationPrompt__c</formula>
    <label>AdditionalInformationPrompt</label>
    <type>Text</type>
</CustomField>