main/default/objects/Product_Pricing__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>IF(ISNULL(Expiration_Date__c), &quot;No&quot;, IF(Expiration_Date__c &lt; NOW(), &quot;Yes&quot;, &quot;No&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired</label>
    <type>Text</type>
</CustomField>