main/default/objects/Product_Pricing__c/fields/Feature_Grouping_Sort__c.field-meta.xml
<CustomField>
    <fullName>Feature_Grouping_Sort__c</fullName>
    <formula>Sales_Product_Rate_Plan__r.Sales_Rate_Plan_Description__r.Feature_Grouping__r.SortKey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feature Grouping Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>