main/default/objects/Product_Pricing__c/fields/Market_Area__c.field-meta.xml
<CustomField>
    <fullName>Market_Area__c</fullName>
    <label>Market Area</label>
    <referenceTo>Market_Area__c</referenceTo>
    <relationshipLabel>Product Pricing</relationshipLabel>
    <relationshipName>Sales_Rate_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>