main/default/objects/Product_Pricing__c/fields/MRC_Floor__c.field-meta.xml
<CustomField>
    <fullName>MRC_Floor__c</fullName>
    <description>The lowest allowed MRC (Monthly recurring charge) on this product</description>
    <inlineHelpText>The lowest allowed MRC (Monthly recurring charge) on this product</inlineHelpText>
    <label>MRC Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>