main/default/objects/Product_Pricing__c/fields/NRC__c.field-meta.xml
<CustomField>
    <fullName>NRC__c</fullName>
    <label>NRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>