main/default/objects/Product_Pricing__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <formula>if(Sales_Product_Rate_Plan__r.Package__c,&#39;Yes&#39;,&#39;No&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package</label>
    <type>Text</type>
</CustomField>