main/default/objects/Product_Pricing__c/fields/Rate_Plan_Market_Area_ID__c.field-meta.xml
<CustomField>
    <fullName>Rate_Plan_Market_Area_ID__c</fullName>
    <label>Rate Plan Market Area ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>