main/default/objects/Product_Pricing__c/fields/Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product__c</fullName>
    <formula>Sales_Product_Rate_Plan__r.Sales_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Product</label>
    <type>Text</type>
</CustomField>