main/default/objects/Product_Pricing__c/fields/Sales_Product_Sort__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product_Sort__c</fullName>
    <formula>Sales_Product_Rate_Plan__r.Sales_Product__r.SortKey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Product Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>