main/default/objects/Product_Pricing__c/fields/Sales_Rate_Plan_Description_Sort__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rate_Plan_Description_Sort__c</fullName>
    <formula>Sales_Product_Rate_Plan__r.Sales_Rate_Plan_Description__r.SortKey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rate Plan Description Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>