main/default/objects/Product_Pricing__c/fields/Sales_Rate_Plan_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rate_Plan_ExternalID__c</fullName>
    <formula>Sales_Product_Rate_Plan__r.Sales_Rate_Plan_Description__r.SalesRatePlanDescExternalID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rate Plan ExternalID</label>
    <type>Text</type>
</CustomField>