main/default/objects/Product_Pricing__c/fields/SalesRatePlanPricingExternalID__c.field-meta.xml
<CustomField>
    <fullName>SalesRatePlanPricingExternalID__c</fullName>
    <externalId>true</externalId>
    <label>SalesRatePlanPricingExternalID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>