main/default/objects/Product_Pricing__c/fields/ServiceAgreementTextId__c.field-meta.xml
<CustomField>
    <fullName>ServiceAgreementTextId__c</fullName>
    <formula>Sales_Product_Rate_Plan__r.Sales_Service_Agreement_Text__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Agreement Text  Id</label>
    <type>Text</type>
</CustomField>