main/default/objects/Product_Pricing__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Rate plan terms</description>
    <label>Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>