main/default/objects/Product_Pricing__c/fields/Voice_Line__c.field-meta.xml
<CustomField>
    <fullName>Voice_Line__c</fullName>
    <formula>IF(Sales_Product_Rate_Plan__r.Voice_Line__c ,&#39;Yes&#39;,&#39;No&#39;)</formula>
    <label>Voice Line</label>
    <type>Text</type>
</CustomField>