main/default/objects/Product_Pricing__c/recordTypes/Element.recordType-meta.xml
<RecordType>
    <fullName>Element</fullName>
    <active>true</active>
    <label>Element</label>
</RecordType>