main/default/objects/Product_Pricing__c/validationRules/Sales_Product_Rate_Plan_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Product_Rate_Plan_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Sales_Product_Rate_Plan__c )</errorConditionFormula>
    <errorMessage>Sales Product Rate Plan required</errorMessage>
</ValidationRule>