main/default/objects/Product_Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>Market_Area__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Sales_Product__c</columns>
    <columns>Rate_Plan_Market_Area_ID__c</columns>
    <columns>MRC__c</columns>
    <columns>MRC_Floor__c</columns>
    <columns>NRC__c</columns>
    <columns>NRC_Floor__c</columns>
    <columns>Term__c</columns>
    <columns>NAME</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>