main/default/objects/Product_Pricing__c/listViews/Cloud_Firewall_Pricing.listView-meta.xml
<ListView>
    <fullName>Cloud_Firewall_Pricing</fullName>
    <columns>Sales_Product__c</columns>
    <columns>NAME</columns>
    <columns>Feature_Grouping__c</columns>
    <columns>Term__c</columns>
    <columns>MRC__c</columns>
    <columns>MRC_Floor__c</columns>
    <columns>NRC__c</columns>
    <columns>MRC_Is_Quote__c</columns>
    <columns>NRC_Floor__c</columns>
    <columns>NAARate__c</columns>
    <columns>NRC_Is_Quote__c</columns>
    <columns>Market_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Product__c</field>
        <operation>equals</operation>
        <value>Cloud Firewall Service</value>
    </filters>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>no</value>
    </filters>
    <filters>
        <field>Market_Area__c</field>
        <operation>equals</operation>
        <value>Oregon</value>
    </filters>
    <label>Cloud Firewall Pricing</label>
</ListView>