main/default/objects/Product_Pricing__c/listViews/Colocation_Services.listView-meta.xml
<ListView>
    <fullName>Colocation_Services</fullName>
    <columns>Market_Area__c</columns>
    <columns>Sales_Product__c</columns>
    <columns>NAME</columns>
    <columns>Feature_Grouping__c</columns>
    <columns>Term__c</columns>
    <columns>MRC__c</columns>
    <columns>MRC_Floor__c</columns>
    <columns>NRC__c</columns>
    <columns>MRC_Is_Quote__c</columns>
    <columns>NRC_Floor__c</columns>
    <columns>NAARate__c</columns>
    <columns>NRC_Is_Quote__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Product__c</field>
        <operation>equals</operation>
        <value>Colocation Services</value>
    </filters>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>no</value>
    </filters>
    <label>Colocation Services</label>
</ListView>