main/default/objects/Product_Pricing__c/listViews/Dedicated_Internet_Services_Pricing.listView-meta.xml
<ListView>
    <fullName>Dedicated_Internet_Services_Pricing</fullName>
    <columns>NAME</columns>
    <columns>Sales_Product__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>Term__c</columns>
    <columns>MRC__c</columns>
    <columns>MRC_Floor__c</columns>
    <columns>MRC_OnNet__c</columns>
    <columns>MRC_Is_Quote__c</columns>
    <columns>NRC__c</columns>
    <columns>NRC_Is_Quote__c</columns>
    <columns>Market_Area__c</columns>
    <columns>Expired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Product__c</field>
        <operation>equals</operation>
        <value>Dedicated Internet,SIP Solutions,Hosted Voice Services</value>
    </filters>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>no</value>
    </filters>
    <filters>
        <field>Sales_Rate_Plan_Description__c</field>
        <operation>contains</operation>
        <value>access</value>
    </filters>
    <filters>
        <field>MRC_OnNet__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Dedicated Internet Access</label>
</ListView>