main/default/objects/Product_Pricing__c/listViews/DSL_and_or_Broadband.listView-meta.xml
<ListView>
    <fullName>DSL_and_or_Broadband</fullName>
    <columns>Sales_Product__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>Market_Area__c</columns>
    <columns>Term__c</columns>
    <columns>MRC__c</columns>
    <columns>MRC_Floor__c</columns>
    <columns>MRC_Is_Quote__c</columns>
    <columns>MRC_OnNet__c</columns>
    <columns>NRC__c</columns>
    <columns>NRC_Is_Quote__c</columns>
    <columns>Expired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Product__c</field>
        <operation>equals</operation>
        <value>DSL and/or Broadband</value>
    </filters>
    <filters>
        <field>Sales_Rate_Plan_Description__c</field>
        <operation>contains</operation>
        <value>Broadband Bandwidth,DSL</value>
    </filters>
    <label>DSL and/or Broadband</label>
</ListView>