main/default/objects/Product_Pricing__c/listViews/Ethernet_Services_Pricing.listView-meta.xml
<ListView>
    <fullName>Ethernet_Services_Pricing</fullName>
    <columns>NAME</columns>
    <columns>Sales_Product__c</columns>
    <columns>Sales_Product_Rate_Plan__c</columns>
    <columns>Market_Area__c</columns>
    <columns>Term__c</columns>
    <columns>MRC__c</columns>
    <columns>MRC_Floor__c</columns>
    <columns>Expired__c</columns>
    <columns>MRC_Is_Quote__c</columns>
    <columns>NRC__c</columns>
    <columns>NRC_Is_Quote__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Product__c</field>
        <operation>contains</operation>
        <value>ethernet services</value>
    </filters>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>no</value>
    </filters>
    <label>Ethernet Services Pricing</label>
</ListView>