main/default/objects/Product_Pricing__c/listViews/Expired.listView-meta.xml
<ListView>
    <fullName>Expired</fullName>
    <columns>NAME</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Sales_Product__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Expired</label>
</ListView>