main/default/objects/Product_Pricing__c/listViews/Feature_Package.listView-meta.xml
<ListView>
    <fullName>Feature_Package</fullName>
    <columns>Sales_Product__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>NAME</columns>
    <columns>Market_Area__c</columns>
    <columns>MRC__c</columns>
    <columns>MRC_Floor__c</columns>
    <columns>MRC_Is_Quote__c</columns>
    <columns>NRC__c</columns>
    <columns>NRC_Floor__c</columns>
    <columns>NRC_Is_Quote__c</columns>
    <columns>Expired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Rate_Plan_Description__c</field>
        <operation>contains</operation>
        <value>feature package</value>
    </filters>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>no</value>
    </filters>
    <label>Feature Package</label>
</ListView>