main/default/objects/Product_Pricing__c/listViews/IP_Address.listView-meta.xml
<ListView>
    <fullName>IP_Address</fullName>
    <columns>Sales_Product__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>MRC__c</columns>
    <columns>MRC_Floor__c</columns>
    <columns>NRC__c</columns>
    <columns>Term__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>no</value>
    </filters>
    <filters>
        <field>Sales_Rate_Plan_Description__c</field>
        <operation>contains</operation>
        <value>IP Address - Bundle</value>
    </filters>
    <label>IP Address</label>
</ListView>