main/default/objects/Product_Pricing__c/listViews/Montana_EoTDM_Pricing.listView-meta.xml
<ListView>
    <fullName>Montana_EoTDM_Pricing</fullName>
    <columns>NAME</columns>
    <columns>Sales_Product__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>Market_Area__c</columns>
    <columns>Term__c</columns>
    <columns>MRC__c</columns>
    <columns>MRC_Floor__c</columns>
    <columns>MRC_Is_Quote__c</columns>
    <columns>NRC__c</columns>
    <columns>NRC_Is_Quote__c</columns>
    <columns>NRC_Floor__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Expired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Rate_Plan_Description__c</field>
        <operation>contains</operation>
        <value>eotdm</value>
    </filters>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>no</value>
    </filters>
    <filters>
        <field>Market_Area__c</field>
        <operation>equals</operation>
        <value>Montana</value>
    </filters>
    <label>Montana EoTDM Pricing</label>
</ListView>