main/default/objects/Product_Pricing__c/listViews/Non_expired.listView-meta.xml
<ListView>
    <fullName>Non_expired</fullName>
    <columns>NAME</columns>
    <columns>Sales_Product__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>Market_Area__c</columns>
    <columns>Term__c</columns>
    <columns>MRC__c</columns>
    <columns>NRC__c</columns>
    <columns>AvailableInWizard__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <label>Non-expired</label>
</ListView>