main/default/objects/Product_Pricing__c/listViews/Non_expired_but_not_visible.listView-meta.xml
<ListView>
    <fullName>Non_expired_but_not_visible</fullName>
    <columns>NAME</columns>
    <columns>AvailableInWizard__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Feature_Grouping__c</columns>
    <columns>Market_Area__c</columns>
    <columns>Package_Feature__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AvailableInWizard__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Package_Feature__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <label>Non-expired but not visible</label>
</ListView>