main/default/objects/Product_Pricing__c/listViews/RPPMAId.listView-meta.xml
<ListView>
    <fullName>RPPMAId</fullName>
    <columns>NAME</columns>
    <columns>Sales_Product__c</columns>
    <columns>Sales_Rate_Plan_Description__c</columns>
    <columns>Rate_Plan_Market_Area_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <label>RPPMAId</label>
</ListView>